some changes on private controllers
