# api/controllers/private/NotificationsController.go
@@ -51,3 +51,58 @@ func (c *NotificationsController) GetNotifications() {
 	c.Data["json"] = c.BaseNotificationController.GetNotifications()
 	c.ServeJSON()
 }
+
+// GetNotificationsCount ...
+// @Title Get Notifications
+// @Description Get notification by username
+// @Param	authHd		header	string	true		"Authentication token"
+// @Param	readed		query	string		"(true or false)"
+// @Param	date		query	string		"yyyy-mm-dd"
+// @Success 200 int
+// @Failure 400 Bad request
+// @Failure 401 Unauthorized
+// @Failure 404 Not Found
+// @Failure 500 Internal Server Error
+// @Accept json
+// @router /session/notificationscount [get]
+func (c *NotificationsController) GetNotificationsCount() {
+	c.Ctx.Input.SetParam("user_id", strconv.Itoa(c.GetAuthor().ID))
+	c.Data["json"] = c.BaseNotificationController.GetNotificationsCount()
+	c.ServeJSON()
+}
+
+// SetUserNotificationsAsReaded ...
+// @Title Set all user's notifications as readed
+// @Description Set all user's notifications as readed
+// @Param	authHd		header	string	true		"Authentication token"
+// @Success 200 OK
+// @Failure 400 Bad request
+// @Failure 401 Unauthorized
+// @Failure 404 Not Found
+// @Failure 500 Internal Server Error
+// @Accept json
+// @router /session/readallnotifications [patch]
+func (c *NotificationsController) SetUserNotificationsAsReaded() {
+	c.Ctx.Input.SetParam("user_id", strconv.Itoa(c.GetAuthor().ID))
+	c.BaseNotificationController.SetUserNotificationsAsReaded()
+	c.Data["json"] = "OK"
+	c.ServeJSON()
+}
+
+// ReadNotification ...
+// @Title Read Notification
+// @Description Read Notification
+// @Param	authHd		header	string	true		"Authentication token"
+// @Success 200 OK
+// @Failure 400 Bad request
+// @Failure 401 Unauthorized
+// @Failure 404 Not Found
+// @Failure 500 Internal Server Error
+// @Accept json
+// @router /session/readnotification [patch]
+func (c *NotificationsController) ReadNotification() {
+	c.Ctx.Input.SetParam("user_id", strconv.Itoa(c.GetAuthor().ID))
+	c.BaseNotificationController.ReadNotification()
+	c.Data["json"] = "OK"
+	c.ServeJSON()
+}
