# api/swagger/swagger.json
@@ -1590,6 +1590,59 @@
                 }
             }
         },
+        "/private/session/notificationscount": {
+            "get": {
+                "tags": [
+                    "private"
+                ],
+                "description": "Get notification by username",
+                "operationId": "NotificationsController.Get Notifications",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "authHd",
+                        "description": "Authentication token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "readed",
+                        "description": "(true or false)",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "date",
+                        "description": "yyyy-mm-dd",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "int"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/private/session/profile": {
             "get": {
                 "tags": [
